Jann 30/objects/CRS_Type__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRS_Type_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>CRS_Type_External_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRS_Type_Name__c</fullName>
        <label>CRS Type Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Examples__c</fullName>
        <label>Examples</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvwCRS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To distinguish if this CRS Type only shows up in glaceau vitaminwater CRS TYpe list</inlineHelpText>
        <label>gvwCRS</label>
        <type>Checkbox</type>
    </fields>
    <label>CRS Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CRS_Type_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Review_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CRS Type ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRS Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>